src/styles/Navbar.css
.navbar-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  user-select: none;
}

.navbar-container > .nav-menu-container > .nav-menu,
.navbar-container > .mobile-nav-menu-container > .nav-menu {
  list-style: None;
  color: var(--clr-300);
  display: flex;
  gap: 2rem;
  font-weight: bold;
}

.navbar-container > .nav-menu-container > .nav-menu > li {
  cursor: pointer;
  position: relative;
}

.navbar-container > .nav-menu-container > .nav-menu > li::after {
  content: "";
  position: absolute;
  bottom: -0.25rem;
  left: 0;
  width: 100%;
  height: 0.2rem;
  background-color: var(--clr-300);
  transform: scaleX(0);
  transition: transform 300ms ease-in;
  transform-origin: right;
}

.navbar-container > .nav-menu-container > .nav-menu > li:hover::after,
.navbar-container > .nav-menu-container > .nav-menu > li:focus::after {
  transform: scaleX(100%);
  transform-origin: left;
}

.navbar-container > .nav-button {
  display: none;
}

@media (min-width: 2560px) {
  .navbar-container {
    max-width: 1440px;
    margin: 0 auto;
  }
}

@media (min-width: 1024px) {
  .navbar-container {
    padding-inline: 4rem;
    height: 4rem;
  }
  .navbar-container > .logo {
    width: 3rem;
  }
}

@media (min-width: 769px) and (max-width: 1023px) {
  .navbar-container {
    padding-inline: 2rem;
    height: 4rem;
  }
}

@media (max-width: 768px) {
  .navbar-container {
    padding-inline: 1rem;
    height: 3rem;
    padding-block: 0.5rem;
  }
  .navbar-container > .logo {
    width: 1.75rem;
  }
  .navbar-container > .nav-button {
    display: block;
    width: 1.75rem;
    z-index: 1;
  }

  .navbar-container > .mobile-nav-menu-container {
    position: absolute;
    top: 0;
    right: 0;
    background-color: var(--clr-300);
    width: 40vw;
    height: 100vh;
  }
  .menu-primary-enter {
    transform: translateX(110%);
  }
  .menu-primary-enter-active {
    transform: translateX(0%);
    transition: transform 300ms ease;
  }
  .menu-primary-exit-active {
    transform: translateX(110%);
    transition: transform 300ms ease;
  }

  .navbar-container > .mobile-nav-menu-container > .nav-menu {
    position: absolute;
    right: 2rem;
    top: 4rem;
    flex-direction: column;
    align-items: flex-end;
    padding-block-start: 2rem;
    gap: 2rem;
    color: var(--clr-100);
  }
}

